<resources>
    <string name="app_name">RealmNotes</string>
    <string name="tv_id">Id</string>
    <string name="tv_nama">Nama</string>
    <string name="tv_title">Nama</string>
    <string name="tv_subtitle">Sub title</string>
    <string name="tv_email">Email</string>
    <string name="bt_add">Add</string>
    <string name="bt_update">Update</string>
    <string name="bt_delete">Delete</string>
</resources>